--- a/src/css/review.css
+++ b/src/css/review.css
@@ -2,13 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
 .reviews {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   width: 100%; }
   .reviews .reviews-banner {
     width: 100%;
-    height: 50vh;
+    height: 40vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -17,8 +14,7 @@
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-size: cover;
-    margin-bottom: 5vh; }
+    background-size: cover; }
     .reviews .reviews-banner h2 {
       font-family: "Montserrat", sans-serif;
       font-weight: 300;
@@ -28,28 +24,33 @@
       text-align: center;
       font-size: 3.5vw; }
   .reviews .reviews-container {
-    display: flex;
-    flex-direction: column;
-    width: 70%;
-    font-family: "Alegreya", serif; }
+    display: grid;
+    grid-template-rows: 10vh repeat(3, 1fr) 5vh;
+    grid-template-columns: 2fr 2fr repeat(4, 1fr) 2fr 2fr;
+    justify-items: center;
+    align-items: center; }
+    .reviews .reviews-container .background-shader {
+      width: 100%;
+      height: 100%;
+      grid-area: 1 / 1 / span 5 / span 4;
+      background-color: #9df3c4; }
     .reviews .reviews-container .review {
       display: flex;
       flex-direction: column;
       justify-content: space-around;
       align-items: flex-start;
-      width: 64%;
-      height: 15vh;
+      width: 100%;
+      height: 20vh;
       margin-bottom: 5vh;
       margin-right: 0;
-      padding: 40px;
       font-size: 20px;
       background-color: #d7fbe8;
-      border: 2px outset #9df3c4;
-      border-radius: 10px;
-      box-shadow: 7px 10px 10px #9df3c4; }
+      border-radius: 10px; }
+      .reviews .reviews-container .review p {
+        padding: 20px; }
       .reviews .reviews-container .review p:nth-child(1)::before,
       .reviews .reviews-container .review p:nth-child(1)::after {
-        content: '“';
+        content: '“ ';
         font-size: 32px;
         font-family: Georgia, 'Times New Roman', Times, serif;
         color: #134977;
@@ -57,8 +58,16 @@
         vertical-align: top;
         line-height: 0.8; }
       .reviews .reviews-container .review p:nth-child(1)::after {
-        content: '”'; }
+        content: ' ”'; }
       .reviews .reviews-container .review p:nth-child(2) {
-        font-style: italic; }
-    .reviews .reviews-container .review:nth-child(2) {
-      align-self: flex-end; }
+        font-style: italic;
+        padding-left: 50px; }
+    .reviews .reviews-container .review1 {
+      grid-area: 2 / 2 / 3 / span 4;
+      box-shadow: -7px 10px 10px #1fab89; }
+    .reviews .reviews-container .review2 {
+      grid-area: 3 / 4 / 4 / span 4;
+      box-shadow: 7px 10px 10px #1fab89; }
+    .reviews .reviews-container .review3 {
+      grid-area: 4 / 2 / 5 / span 4;
+      box-shadow: -7px 10px 10px #1fab89; }
