--- a/src/scss/review.scss
+++ b/src/scss/review.scss
@@ -1,13 +1,10 @@
 @import './variables/variables';
 
 .reviews {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
 	width: 100%;
 	.reviews-banner {
 		width: 100%;
-		height: 50vh;
+		height: 40vh;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
@@ -27,31 +24,37 @@
 			text-align: center;
 			font-size: 3.5vw;
 		}
-		margin-bottom: 5vh;
 	}
 	.reviews-container {
-		display: flex;
-		flex-direction: column;
-		width: 70%;
-		font-family: $text-font;
+		display: grid;
+		grid-template-rows: 10vh repeat(3, 1fr) 5vh;
+		grid-template-columns: 2fr 2fr repeat(4, 1fr) 2fr 2fr;
+		justify-items: center;
+		align-items: center;
+		.background-shader {
+			width: 100%;
+			height: 100%;
+			grid-area: 1 / 1 / span 5 / span 4;
+			background-color: $green2;
+		}
 		.review {
 			display: flex;
 			flex-direction: column;
 			justify-content: space-around;
 			align-items: flex-start;
-			width: 64%;
-			height: 15vh;
+			width: 100%;
+			height: 20vh;
 			margin-bottom: 5vh;
 			margin-right: 0;
-			padding: 40px;
 			font-size: 20px;
 			background-color: $container-color;
-			border: 2px outset $container-shadow;
 			border-radius: 10px;
-			box-shadow: 7px 10px 10px $container-shadow;
+			p {
+				padding: 20px;
+			}
 			p:nth-child(1)::before,
 			p:nth-child(1)::after {
-				content: '“';
+				content: '“ ';
 				font-size: 32px;
 				font-family: Georgia, 'Times New Roman', Times, serif;
 				color: #134977;
@@ -60,14 +63,24 @@
 				line-height: 0.8;
 			}
 			p:nth-child(1)::after {
-				content: '”';
+				content: ' ”';
 			}
 			p:nth-child(2) {
 				font-style: italic;
+				padding-left: 50px;
 			}
 		}
-		.review:nth-child(2) {
-			align-self: flex-end;
+		.review1 {
+			grid-area: 2 / 2 / 3 / span 4;
+			box-shadow: -7px 10px 10px $green4;
+		}
+		.review2 {
+			grid-area: 3 / 4 / 4 / span 4;
+			box-shadow: 7px 10px 10px $green4;
+		}
+		.review3 {
+			grid-area: 4 / 2 / 5 / span 4;
+			box-shadow: -7px 10px 10px $green4;
 		}
 	}
 }
