--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -13,7 +13,7 @@
 		display: grid;
 		grid-template-columns: 1fr 1fr;
 		height: 90vh;
-		background: linear-gradient($container-shadow, white);
+		background: linear-gradient($green2, white);
 		.family-text {
 			justify-self: center;
 			align-self: center;
@@ -31,16 +31,16 @@
 				margin-bottom: 15vh;
 				color: black;
 				opacity: 0.85;
-				background-color: $container-color;
+				background-color: $green1;
 				padding: 10px;
 				border-radius: 10px;
-				text-shadow: 2px 2px 3px $text-shadow;
+				text-shadow: 2px 2px 3px $green4;
 			}
 			p {
 				width: 37vw;
 				padding: 10px;
 				border-radius: 10px;
-				background-color: $container-color;
+				background-color: $green1;
 			}
 		}
 		img {
@@ -49,14 +49,14 @@
 			height: 30vw;
 			width: 30vw;
 			border-radius: 50%;
-			box-shadow: 7px 10px 10px $container-shadow;
+			box-shadow: 7px 10px 10px $green2;
 			object-fit: cover;
 		}
 	}
 	.facilities {
 		.banner {
 			display: grid;
-			height: 40vh;
+			height: 50vh;
 			background: url('../images/about-banner-placeholder.jpg');
 			background-position: center;
 			background-attachment: fixed;
@@ -70,13 +70,13 @@
 				font-weight: 300;
 				color: white;
 				opacity: 0.85;
-				text-shadow: 2px 2px 3px $text-shadow;
+				text-shadow: 2px 2px 3px $green4;
 			}
 		}
 		.tiles {
 			display: grid;
 			grid-template-columns: 1fr 1fr;
-			background-color: $container-shadow;
+			background-color: $green2;
 			img {
 				width: 100%;
 				height: 50vh;
@@ -103,9 +103,9 @@
 			text-align: center;
 			justify-self: center;
 			align-self: center;
-			background-color: $container-color;
-			border: 2px outset $container-shadow;
-			box-shadow: 7px 10px 10px $container-color;
+			background-color: $green1;
+			border: 2px outset $green2;
+			box-shadow: 7px 10px 10px $green1;
 			padding: 20px 10px;
 			border-radius: 10px;
 			p {
