--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -1,9 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
 nav {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   align-items: center;
   height: 10vh;
   background-color: #ecfaf3;
@@ -20,16 +19,17 @@ nav {
       font-family: "Montserrat", sans-serif;
       font-size: 3.5vh; }
   nav ul {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     list-style-type: none;
-    justify-content: space-around;
+    justify-items: center;
     align-items: center;
-    width: 50vw;
+    width: 100%;
     height: 100%; }
     nav ul li {
       transition: all 0.3s;
       height: 100%;
-      width: 25%;
+      width: 100%;
       flex-grow: 1;
       display: flex;
       justify-content: center;
