--- a/src/css/services.css
+++ b/src/css/services.css
@@ -4,12 +4,11 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 90vh 100vh 30vh;
-  flex-direction: column;
-  justify-content: center;
   margin-top: 10vh; }
   .services h1,
   .services h2,
-  .services th {
+  .services th,
+  .services span {
     font-family: "Montserrat", sans-serif;
     font-weight: 300;
     text-shadow: 2px 2px 3px #1fab89;
@@ -18,7 +17,7 @@
   .services td,
   .services li {
     font-family: "Alegreya", serif;
-    font-size: 20px; }
+    font-size: 1.15rem; }
   .services .our-services {
     grid-area: 1 / 1 / 2 / 3;
     width: 100%;
@@ -73,12 +72,8 @@
       font-size: 2vw; }
     .services .prices .multiple-nights {
       height: 40vh; }
-    .services .prices .one-night {
-      align-self: start;
-      position: relative;
-      top: 5vh;
-      height: 25vh; }
     .services .prices table {
+      align-self: start;
       width: 500px;
       padding: 0 20px 20px;
       border-radius: 10px;
@@ -89,21 +84,42 @@
       box-shadow: -7px 10px 10px #1fab89; }
       .services .prices table tr th {
         font-size: 2rem;
-        font-weight: 400; }
+        font-weight: 400;
+        padding: 10px 0; }
       .services .prices table tr td,
       .services .prices table tr th {
         border-bottom: 5px dotted #13614d;
-        border-right: none;
-        padding: 10px 0; }
+        border-right: none; }
+      .services .prices table tr td {
+        padding: 5px 0; }
       .services .prices table tr td:nth-child(2) {
         text-align: center; }
+    .services .prices p {
+      box-sizing: border-box;
+      align-self: center;
+      width: 500px;
+      padding: 20px 20px;
+      border-radius: 10px;
+      background: url("../images/doggo-background-texture-3.png");
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: 3%;
+      box-shadow: -7px 10px 10px #1fab89;
+      text-align: center; }
+      .services .prices p span {
+        display: block;
+        width: 100%;
+        font-size: 2rem;
+        font-weight: 400;
+        padding-bottom: 10px; }
   .services .important-information {
     grid-area: 2 / 2 / 3 / 3;
     background: linear-gradient(#d7fbe8, white);
     width: 100%;
     height: 100%;
     display: grid;
-    place-items: center;
+    justify-items: center;
+    align-items: start;
     grid-template-rows: 10vh 50vh 40vh;
     background: url("../images/doggo-background-texture-3.png");
     background-repeat: no-repeat;
@@ -116,7 +132,6 @@
       display: flex;
       flex-direction: column;
       justify-content: space-evenly;
-      height: 40vh;
       width: 480px;
       padding-right: 20px;
       border-radius: 10px;
@@ -125,6 +140,7 @@
       border: 1px solid #9df3c4;
       list-style-type: none; }
       .services .important-information ul li {
+        padding: 10px 0;
         display: flex;
         align-items: center;
         margin-left: 25px;
@@ -135,9 +151,7 @@
           height: 40px;
           padding-right: 20px; }
     .services .important-information table {
-      align-self: start;
-      position: relative;
-      top: 5vh;
+      align-self: center;
       height: 25vh;
       width: 500px;
       background-color: #d7fbe8;
