--- a/src/scss/services.scss
+++ b/src/scss/services.scss
@@ -4,12 +4,11 @@
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	grid-template-rows: 90vh 100vh 30vh;
-	flex-direction: column;
-	justify-content: center;
 	margin-top: 10vh;
 	h1,
 	h2,
-	th {
+	th,
+	span {
 		font-family: $title-font;
 		font-weight: 300;
 		text-shadow: 2px 2px 3px $green4;
@@ -19,7 +18,7 @@
 	td,
 	li {
 		font-family: $text-font;
-		font-size: 20px;
+		font-size: 1.15rem;
 	}
 
 	.our-services {
@@ -86,13 +85,8 @@
 		.multiple-nights {
 			height: 40vh;
 		}
-		.one-night {
-			align-self: start;
-			position: relative;
-			top: 5vh;
-			height: 25vh;
-		}
 		table {
+			align-self: start;
 			width: 500px;
 			padding: 0 20px 20px;
 			border-radius: 10px;
@@ -105,16 +99,39 @@
 				th {
 					font-size: 2rem;
 					font-weight: 400;
+					padding: 10px 0;
 				}
 				td,
 				th {
 					border-bottom: 5px dotted $green5;
 					border-right: none;
-					padding: 10px 0;
+				}
+				td {
+					padding: 5px 0;
 				}
 				td:nth-child(2) {
 					text-align: center;
 				}
+			}
+		}
+		p {
+			box-sizing: border-box;
+			align-self: center;
+			width: 500px;
+			padding: 20px 20px;
+			border-radius: 10px;
+			background: url('../images/doggo-background-texture-3.png');
+			background-repeat: no-repeat;
+			background-size: cover;
+			background-position: 3%;
+			box-shadow: -7px 10px 10px $green4;
+			text-align: center;
+			span {
+				display: block;
+				width: 100%;
+				font-size: 2rem;
+				font-weight: 400;
+				padding-bottom: 10px;
 			}
 		}
 	}
@@ -124,7 +141,8 @@
 		width: 100%;
 		height: 100%;
 		display: grid;
-		place-items: center;
+		justify-items: center;
+		align-items: start;
 		grid-template-rows: 10vh 50vh 40vh;
 		background: url('../images/doggo-background-texture-3.png');
 		background-repeat: no-repeat;
@@ -138,7 +156,6 @@
 			display: flex;
 			flex-direction: column;
 			justify-content: space-evenly;
-			height: 40vh;
 			width: 480px;
 			padding-right: 20px;
 			border-radius: 10px;
@@ -147,6 +164,7 @@
 			border: 1px solid $green2;
 			list-style-type: none;
 			li {
+				padding: 10px 0;
 				display: flex;
 				align-items: center;
 				img {
@@ -161,9 +179,7 @@
 		}
 
 		table {
-			align-self: start;
-			position: relative;
-			top: 5vh;
+			align-self: center;
 			height: 25vh;
 			width: 500px;
 			background-color: $green1;
