--- a/src/css/review.css
+++ b/src/css/review.css
@@ -69,22 +69,34 @@
       box-shadow: -7px 10px 10px #1fab89; }
     .reviews .reviews-container .review2 {
       grid-area: 3 / 4 / 4 / span 4;
-      box-shadow: 7px 10px 10px #1fab89; }
+      box-shadow: 7px 10px 10px #1fab89;
+      background: url("../images/doggo-background-texture-3.png");
+      background-repeat: no-repeat;
+      background-size: cover; }
     .reviews .reviews-container .review3 {
       grid-area: 4 / 2 / 5 / span 4;
       box-shadow: -7px 10px 10px #1fab89; }
     .reviews .reviews-container .review4 {
       grid-area: 5 / 4 / 6 / span 4;
-      box-shadow: 7px 10px 10px #1fab89; }
+      box-shadow: 7px 10px 10px #1fab89;
+      background: url("../images/doggo-background-texture-3.png");
+      background-repeat: no-repeat;
+      background-size: cover; }
     .reviews .reviews-container .review5 {
       grid-area: 6 / 2 / 7 / span 4;
       box-shadow: -7px 10px 10px #1fab89; }
     .reviews .reviews-container .review6 {
       grid-area: 7 / 4 / 8 / span 4;
-      box-shadow: 7px 10px 10px #1fab89; }
+      box-shadow: 7px 10px 10px #1fab89;
+      background: url("../images/doggo-background-texture-3.png");
+      background-repeat: no-repeat;
+      background-size: cover; }
     .reviews .reviews-container .review7 {
       grid-area: 8 / 2 / 9 / span 4;
       box-shadow: -7px 10px 10px #1fab89; }
     .reviews .reviews-container .review8 {
       grid-area: 9 / 4 / 10 / span 4;
-      box-shadow: 7px 10px 10px #1fab89; }
+      box-shadow: 7px 10px 10px #1fab89;
+      background: url("../images/doggo-background-texture-3.png");
+      background-repeat: no-repeat;
+      background-size: cover; }
