--- a/src/scss/review.scss
+++ b/src/scss/review.scss
@@ -79,6 +79,9 @@
 		.review2 {
 			grid-area: 3 / 4 / 4 / span 4;
 			box-shadow: 7px 10px 10px $green4;
+			background: url('../images/doggo-background-texture-3.png');
+			background-repeat: no-repeat;
+			background-size: cover;
 		}
 		.review3 {
 			grid-area: 4 / 2 / 5 / span 4;
@@ -87,6 +90,9 @@
 		.review4 {
 			grid-area: 5 / 4 / 6 / span 4;
 			box-shadow: 7px 10px 10px $green4;
+			background: url('../images/doggo-background-texture-3.png');
+			background-repeat: no-repeat;
+			background-size: cover;
 		}
 		.review5 {
 			grid-area: 6 / 2 / 7 / span 4;
@@ -95,6 +101,9 @@
 		.review6 {
 			grid-area: 7 / 4 / 8 / span 4;
 			box-shadow: 7px 10px 10px $green4;
+			background: url('../images/doggo-background-texture-3.png');
+			background-repeat: no-repeat;
+			background-size: cover;
 		}
 		.review7 {
 			grid-area: 8 / 2 / 9 / span 4;
@@ -103,6 +112,9 @@
 		.review8 {
 			grid-area: 9 / 4 / 10 / span 4;
 			box-shadow: 7px 10px 10px $green4;
+			background: url('../images/doggo-background-texture-3.png');
+			background-repeat: no-repeat;
+			background-size: cover;
 		}
 	}
 }
