--- a/src/css/review.css
+++ b/src/css/review.css
@@ -1,34 +1,51 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
+.reviews .reviews-banner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+
+.reviews .reviews-banner h2 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+  color: white;
+  opacity: 0.85;
+  text-shadow: 2px 2px 3px #1fab89; }
+
+.reviews .reviews-container .review1, .reviews .reviews-container .review3, .reviews .reviews-container .review5, .reviews .reviews-container .review7 {
+  box-shadow: -7px 10px 10px #1fab89;
+  border-radius: 10px; }
+
+.reviews .reviews-container .review2, .reviews .reviews-container .review4, .reviews .reviews-container .review6, .reviews .reviews-container .review8 {
+  box-shadow: 7px 10px 10px #1fab89;
+  border-radius: 10px; }
+
+.reviews .reviews-container .review2, .reviews .reviews-container .review4, .reviews .reviews-container .review6, .reviews .reviews-container .review8 {
+  background: url("../images/doggo-background-texture-3.png");
+  background-repeat: no-repeat;
+  background-size: cover; }
+
 .reviews {
   width: 100%; }
   .reviews .reviews-banner {
-    width: 100%;
-    height: 40vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../images/banner-placeholder-2.jpg);
-    background-position: center;
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../images/banner-placeholder-2.jpg");
+    background-position: 50% 50%;
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-size: cover; }
+    background-size: cover;
+    width: 100%;
+    height: 40vh; }
     .reviews .reviews-banner h2 {
-      font-family: "Montserrat", sans-serif;
-      font-weight: 300;
-      color: white;
-      opacity: 0.85;
-      text-shadow: 2px 2px 3px #1fab89;
-      text-align: center;
       font-size: 3.5vw; }
   .reviews .reviews-container {
     display: grid;
     grid-template-rows: 10vh repeat(8, minmax(10vh, auto)) 5vh;
     grid-template-columns: 2fr 2fr repeat(4, 1fr) 2fr 2fr;
-    justify-items: center;
-    align-items: center; }
+    place-items: center; }
     .reviews .reviews-container .background-shader {
       width: 100%;
       height: 100%;
@@ -44,9 +61,7 @@
       width: 100%;
       min-height: 20vh;
       margin-bottom: 5vh;
-      margin-right: 0;
-      background-color: #d7fbe8;
-      border-radius: 10px; }
+      background-color: #d7fbe8; }
       .reviews .reviews-container .review p {
         padding: 16px; }
       .reviews .reviews-container .review p:nth-child(1)::before,
@@ -65,38 +80,18 @@
         font-style: italic;
         padding-left: 50px; }
     .reviews .reviews-container .review1 {
-      grid-area: 2 / 2 / 3 / span 4;
-      box-shadow: -7px 10px 10px #1fab89; }
+      grid-area: 2 / 2/span 1/span 4; }
     .reviews .reviews-container .review2 {
-      grid-area: 3 / 4 / 4 / span 4;
-      box-shadow: 7px 10px 10px #1fab89;
-      background: url("../images/doggo-background-texture-3.png");
-      background-repeat: no-repeat;
-      background-size: cover; }
+      grid-area: 3 / 4/span 1/span 4; }
     .reviews .reviews-container .review3 {
-      grid-area: 4 / 2 / 5 / span 4;
-      box-shadow: -7px 10px 10px #1fab89; }
+      grid-area: 4 / 2/span 1/span 4; }
     .reviews .reviews-container .review4 {
-      grid-area: 5 / 4 / 6 / span 4;
-      box-shadow: 7px 10px 10px #1fab89;
-      background: url("../images/doggo-background-texture-3.png");
-      background-repeat: no-repeat;
-      background-size: cover; }
+      grid-area: 5 / 4/span 1/span 4; }
     .reviews .reviews-container .review5 {
-      grid-area: 6 / 2 / 7 / span 4;
-      box-shadow: -7px 10px 10px #1fab89; }
+      grid-area: 6 / 2/span 1/span 4; }
     .reviews .reviews-container .review6 {
-      grid-area: 7 / 4 / 8 / span 4;
-      box-shadow: 7px 10px 10px #1fab89;
-      background: url("../images/doggo-background-texture-3.png");
-      background-repeat: no-repeat;
-      background-size: cover; }
+      grid-area: 7 / 4/span 1/span 4; }
     .reviews .reviews-container .review7 {
-      grid-area: 8 / 2 / 9 / span 4;
-      box-shadow: -7px 10px 10px #1fab89; }
+      grid-area: 8 / 2/span 1/span 4; }
     .reviews .reviews-container .review8 {
-      grid-area: 9 / 4 / 10 / span 4;
-      box-shadow: 7px 10px 10px #1fab89;
-      background: url("../images/doggo-background-texture-3.png");
-      background-repeat: no-repeat;
-      background-size: cover; }
+      grid-area: 9 / 4/span 1/span 4; }
