--- a/src/scss/review.scss
+++ b/src/scss/review.scss
@@ -1,27 +1,15 @@
 @import './variables/variables';
+@import './variables/mixins';
 
 .reviews {
 	width: 100%;
 	.reviews-banner {
+		@include parallax-banner('../images/banner-placeholder-2.jpg');
+		@extend %centered-column-flexbox;
 		width: 100%;
 		height: 40vh;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-		background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-			url(../images/banner-placeholder-2.jpg);
-		background-position: center;
-		background-attachment: fixed;
-		background-repeat: no-repeat;
-		background-size: cover;
 		h2 {
-			font-family: $title-font;
-			font-weight: 300;
-			color: white;
-			opacity: 0.85;
-			text-shadow: 2px 2px 3px $green4;
-			text-align: center;
+			@extend %title-font-styles;
 			font-size: 3.5vw;
 		}
 	}
@@ -29,8 +17,7 @@
 		display: grid;
 		grid-template-rows: 10vh repeat(8, minmax(10vh, auto)) 5vh;
 		grid-template-columns: 2fr 2fr repeat(4, 1fr) 2fr 2fr;
-		justify-items: center;
-		align-items: center;
+		place-items: center;
 		.background-shader {
 			width: 100%;
 			height: 100%;
@@ -47,9 +34,7 @@
 			width: 100%;
 			min-height: 20vh;
 			margin-bottom: 5vh;
-			margin-right: 0;
 			background-color: $green1;
-			border-radius: 10px;
 			p {
 				padding: 16px;
 			}
@@ -72,49 +57,17 @@
 				padding-left: 50px;
 			}
 		}
-		.review1 {
-			grid-area: 2 / 2 / 3 / span 4;
-			box-shadow: -7px 10px 10px $green4;
-		}
-		.review2 {
-			grid-area: 3 / 4 / 4 / span 4;
-			box-shadow: 7px 10px 10px $green4;
-			background: url('../images/doggo-background-texture-3.png');
-			background-repeat: no-repeat;
-			background-size: cover;
-		}
-		.review3 {
-			grid-area: 4 / 2 / 5 / span 4;
-			box-shadow: -7px 10px 10px $green4;
-		}
-		.review4 {
-			grid-area: 5 / 4 / 6 / span 4;
-			box-shadow: 7px 10px 10px $green4;
-			background: url('../images/doggo-background-texture-3.png');
-			background-repeat: no-repeat;
-			background-size: cover;
-		}
-		.review5 {
-			grid-area: 6 / 2 / 7 / span 4;
-			box-shadow: -7px 10px 10px $green4;
-		}
-		.review6 {
-			grid-area: 7 / 4 / 8 / span 4;
-			box-shadow: 7px 10px 10px $green4;
-			background: url('../images/doggo-background-texture-3.png');
-			background-repeat: no-repeat;
-			background-size: cover;
-		}
-		.review7 {
-			grid-area: 8 / 2 / 9 / span 4;
-			box-shadow: -7px 10px 10px $green4;
-		}
-		.review8 {
-			grid-area: 9 / 4 / 10 / span 4;
-			box-shadow: 7px 10px 10px $green4;
-			background: url('../images/doggo-background-texture-3.png');
-			background-repeat: no-repeat;
-			background-size: cover;
+		@for $i from 1 through 8 {
+			.review#{$i} {
+				@if ($i % 2 == 1) {
+					grid-area: #{$i + 1} / 2 / span 1 / span 4;
+					@extend %left-card;
+				} @else {
+					grid-area: #{$i + 1} / 4 / span 1 / span 4;
+					@extend %light-wallpaper;
+					@extend %right-card;
+				}
+			}
 		}
 	}
 }
