--- a/src/css/services.css
+++ b/src/css/services.css
@@ -1,5 +1,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
+.services .prices table, .services .prices p {
+  box-shadow: -7px 10px 10px #1fab89;
+  border-radius: 10px; }
+
+.services .important-information ul, .services .important-information table {
+  box-shadow: 7px 10px 10px #1fab89;
+  border-radius: 10px; }
+
+.services .our-services .image-container, .services .prices table, .services .prices p, .services .important-information {
+  background: url("../images/doggo-background-texture-3.png");
+  background-repeat: no-repeat;
+  background-size: cover; }
+
 .services {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -11,8 +26,9 @@
   .services span {
     font-family: "Montserrat", sans-serif;
     font-weight: 300;
-    text-shadow: 2px 2px 3px #1fab89;
-    opacity: 0.85; }
+    color: black;
+    opacity: 0.85;
+    text-shadow: 2px 2px 3px #1fab89; }
   .services p,
   .services td,
   .services li {
@@ -24,9 +40,19 @@
     height: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    align-items: center;
-    height: 90vh;
     background-color: #d7fbe8; }
+    .services .our-services .image-container {
+      display: grid;
+      place-items: center;
+      height: 100%;
+      width: 100%;
+      background-position: 3%; }
+      .services .our-services .image-container img {
+        height: 30vw;
+        width: 30vw;
+        border-radius: 50%;
+        object-fit: cover;
+        object-position: 50% 30%; }
     .services .our-services .container {
       display: flex;
       flex-direction: column;
@@ -42,21 +68,6 @@
       .services .our-services .container p {
         width: 30vw;
         margin-left: 5vw; }
-    .services .our-services .image-container {
-      display: grid;
-      height: 100%;
-      width: 100%;
-      background: url("../images/doggo-background-texture-3.png");
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: 3%; }
-      .services .our-services .image-container img {
-        place-self: center;
-        height: 30vw;
-        width: 30vw;
-        border-radius: 50%;
-        object-fit: cover;
-        object-position: 50% 30%; }
   .services .prices {
     grid-area: 2 / 1 / 3 / 2;
     display: grid;
@@ -70,41 +81,25 @@
       text-align: center; }
     .services .prices h2 {
       font-size: 2vw; }
-    .services .prices .multiple-nights {
-      height: 40vh; }
     .services .prices table {
       align-self: start;
       width: 500px;
-      padding: 0 20px 20px;
-      border-radius: 10px;
-      background: url("../images/doggo-background-texture-3.png");
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: 3%;
-      box-shadow: -7px 10px 10px #1fab89; }
+      padding: 0 20px 20px; }
       .services .prices table tr th {
         font-size: 2rem;
         font-weight: 400;
         padding: 10px 0; }
       .services .prices table tr td,
       .services .prices table tr th {
-        border-bottom: 5px dotted #13614d;
-        border-right: none; }
+        border-bottom: 5px dotted #13614d; }
       .services .prices table tr td {
         padding: 5px 0; }
       .services .prices table tr td:nth-child(2) {
         text-align: center; }
     .services .prices p {
       box-sizing: border-box;
-      align-self: center;
       width: 500px;
       padding: 20px 20px;
-      border-radius: 10px;
-      background: url("../images/doggo-background-texture-3.png");
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: 3%;
-      box-shadow: -7px 10px 10px #1fab89;
       text-align: center; }
       .services .prices p span {
         display: block;
@@ -114,50 +109,39 @@
         padding-bottom: 10px; }
   .services .important-information {
     grid-area: 2 / 2 / 3 / 3;
-    background: linear-gradient(#d7fbe8, white);
+    display: grid;
+    place-items: center;
     width: 100%;
     height: 100%;
-    display: grid;
-    justify-items: center;
-    align-items: start;
-    grid-template-rows: 10vh 50vh 40vh;
-    background: url("../images/doggo-background-texture-3.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 3%; }
+    grid-template-rows: 10vh 50vh 40vh; }
     .services .important-information h1 {
       font-size: 3.5vw;
       text-align: center; }
     .services .important-information ul {
+      box-sizing: border-box;
+      align-self: start;
       display: flex;
       flex-direction: column;
       justify-content: space-evenly;
-      width: 480px;
+      width: 500px;
       padding-right: 20px;
-      border-radius: 10px;
-      box-shadow: 7px 10px 10px #1fab89;
       background-color: #d7fbe8;
       border: 1px solid #9df3c4;
       list-style-type: none; }
       .services .important-information ul li {
-        padding: 10px 0;
         display: flex;
         align-items: center;
         margin-left: 25px;
-        margin-right: 5px; }
+        margin-right: 5px;
+        padding: 10px 0; }
         .services .important-information ul li img {
           display: inline;
           width: 40px;
           height: 40px;
           padding-right: 20px; }
     .services .important-information table {
-      align-self: center;
-      height: 25vh;
       width: 500px;
-      background-color: #d7fbe8;
       padding: 20px;
-      border-radius: 10px;
-      box-shadow: 7px 10px 10px #1fab89;
       background-color: #d7fbe8;
       border: 1px solid #9df3c4; }
       .services .important-information table tr th {
