--- a/src/scss/services.scss
+++ b/src/scss/services.scss
@@ -1,4 +1,5 @@
 @import './variables/variables';
+@import './variables/mixins';
 
 .services {
 	display: grid;
@@ -9,10 +10,7 @@
 	h2,
 	th,
 	span {
-		font-family: $title-font;
-		font-weight: 300;
-		text-shadow: 2px 2px 3px $green4;
-		opacity: 0.85;
+		@include title-styles(black);
 	}
 	p,
 	td,
@@ -27,9 +25,18 @@
 		height: 100%;
 		display: grid;
 		grid-template-columns: 1fr 1fr;
-		align-items: center;
-		height: 90vh;
 		background-color: $green1;
+		.image-container {
+			@extend %light-wallpaper;
+			display: grid;
+			place-items: center;
+			height: 100%;
+			width: 100%;
+			background-position: 3%;
+			img {
+				@include circular-image(30vw, 30%);
+			}
+		}
 		.container {
 			display: flex;
 			flex-direction: column;
@@ -48,23 +55,6 @@
 				margin-left: 5vw;
 			}
 		}
-		.image-container {
-			display: grid;
-			height: 100%;
-			width: 100%;
-			background: url('../images/doggo-background-texture-3.png');
-			background-repeat: no-repeat;
-			background-size: cover;
-			background-position: 3%;
-			img {
-				place-self: center;
-				height: 30vw;
-				width: 30vw;
-				border-radius: 50%;
-				object-fit: cover;
-				object-position: 50% 30%;
-			}
-		}
 	}
 	.prices {
 		grid-area: 2 / 1 / 3 / 2;
@@ -74,7 +64,6 @@
 		width: 100%;
 		height: 100%;
 		background-color: $green2;
-
 		h1 {
 			font-size: 3.5vw;
 			text-align: center;
@@ -82,19 +71,12 @@
 		h2 {
 			font-size: 2vw;
 		}
-		.multiple-nights {
-			height: 40vh;
-		}
 		table {
+			@extend %light-wallpaper;
+			@extend %left-card;
 			align-self: start;
 			width: 500px;
 			padding: 0 20px 20px;
-			border-radius: 10px;
-			background: url('../images/doggo-background-texture-3.png');
-			background-repeat: no-repeat;
-			background-size: cover;
-			background-position: 3%;
-			box-shadow: -7px 10px 10px $green4;
 			tr {
 				th {
 					font-size: 2rem;
@@ -104,7 +86,6 @@
 				td,
 				th {
 					border-bottom: 5px dotted $green5;
-					border-right: none;
 				}
 				td {
 					padding: 5px 0;
@@ -115,16 +96,11 @@
 			}
 		}
 		p {
+			@extend %light-wallpaper;
+			@extend %left-card;
 			box-sizing: border-box;
-			align-self: center;
 			width: 500px;
 			padding: 20px 20px;
-			border-radius: 10px;
-			background: url('../images/doggo-background-texture-3.png');
-			background-repeat: no-repeat;
-			background-size: cover;
-			background-position: 3%;
-			box-shadow: -7px 10px 10px $green4;
 			text-align: center;
 			span {
 				display: block;
@@ -136,56 +112,48 @@
 		}
 	}
 	.important-information {
+		@extend %light-wallpaper;
 		grid-area: 2 / 2 / 3 / 3;
-		background: linear-gradient($green1, white);
+		display: grid;
+		place-items: center;
 		width: 100%;
 		height: 100%;
-		display: grid;
-		justify-items: center;
-		align-items: start;
 		grid-template-rows: 10vh 50vh 40vh;
-		background: url('../images/doggo-background-texture-3.png');
-		background-repeat: no-repeat;
-		background-size: cover;
-		background-position: 3%;
 		h1 {
 			font-size: 3.5vw;
 			text-align: center;
 		}
 		ul {
+			@extend %right-card;
+			box-sizing: border-box;
+			align-self: start;
 			display: flex;
 			flex-direction: column;
 			justify-content: space-evenly;
-			width: 480px;
+			width: 500px;
 			padding-right: 20px;
-			border-radius: 10px;
-			box-shadow: 7px 10px 10px $green4;
 			background-color: $green1;
 			border: 1px solid $green2;
 			list-style-type: none;
 			li {
-				padding: 10px 0;
 				display: flex;
 				align-items: center;
+				margin-left: 25px;
+				margin-right: 5px;
+				padding: 10px 0;
 				img {
 					display: inline;
 					width: 40px;
 					height: 40px;
 					padding-right: 20px;
 				}
-				margin-left: 25px;
-				margin-right: 5px;
 			}
 		}
 
 		table {
-			align-self: center;
-			height: 25vh;
+			@extend %right-card;
 			width: 500px;
-			background-color: $green1;
 			padding: 20px;
-			border-radius: 10px;
-			box-shadow: 7px 10px 10px $green4;
 			background-color: $green1;
 			border: 1px solid $green2;
 			tr {
