--- a/src/scss/variables/_mixins.scss
+++ b/src/scss/variables/_mixins.scss
@@ -17,7 +17,7 @@
 	text-shadow: 2px 2px 3px $green4;
 }
 
-@mixin circular-image($size, $x: 50%, $y: 50%) {
+@mixin circular-image($size, $y: 50%, $x: 50%) {
 	height: $size;
 	width: $size;
 	border-radius: 50%;
